# math-classes

./: .gitignore  .travis.yml  AbstractIntegers.v  AbstractNaturals.v  AbstractProperties.v  AbstractRationals.v  BoringInstances.v  CanonicalNames.v  CatStuff.v  FieldOps.v  FieldOrder.v  IntegerOrder.v  IntegerTheory.v  LICENSE  Make  Makefile  MinMax.v  ModelStuff.v  MonoidOrder.v  Naturals.v  NaturalsOrder.v  Numbers.v  Q_Rationals.v  README  README.md  RingAlgebra.v  RingCat.v  RingOps.v  SConscript  SConstruct  SemiGroupOrder.v  SemiRingAlgebra.v  SemiRingOrder.v  Structures.v  TwoRingAlgebra.v  UniversalAlgebra.v  _CoqProject.in  alg.bib  clean.sh  compile.sh  (+20 more)
broken/: bijective.v  cons_list.v  sequences.v
categories/: JMcat.v  algebra.v  algebras.v  cat.v  categories.v  dual.v  empty.v  functors.v  orders.v  product.v  setoid.v  setoids.v  ua_variety.v  unit.v  varieties.v  variety.v
doc/: hierarchy.dot  orders.dot  rationale.txt
functors/: constant.v
implementations/: NType_naturals.v  QType_rationals.v  ZType_integers.v  binary_positives.v  bool.v  cons_list.v  dyadic_rationals.v  dyadics.v  fast_integers.v  fast_naturals.v  fast_rationals.v  field_of_fractions.v  intfrac_rationals.v  list.v  list_finite_set.v  modular_ring.v  mset_finite_set.v  natpair_integers.v  ne_list.v  nonneg_integers_naturals.v  nonneg_semiring_elements.v  nonzero_field_elements.v  option.v  peano_naturals.v  polynomials.v  positive_semiring_elements.v  semiring_pairs.v  signed_binary_positive_integers.v  signed_binary_positives.v  stdlib_binary_integers.v  stdlib_binary_naturals.v  stdlib_rationals.v
interfaces/: abstract_algebra.v  additional_operations.v  canonical_names.v  finite_sets.v  functors.v  integers.v  monads.v  naturals.v  orders.v  rationals.v  sequences.v  ua_basic.v  universal_algebra.v  vectorspace.v
misc/: JMrelation.v  benchmarks_nobuild.v  decision.v  propholds.v  setoid_tactics.v  stdlib_hints.v  (+3 more)
(+268 files in other folders)
