opam-version: "2.0"
maintainer: "b.a.w.spitters@gmail.com"
version: "dev"

homepage: "https://github.com/coq-community/math-classes"
dev-repo: "git+https://github.com/coq-community/math-classes.git"
bug-reports: "https://github.com/coq-community/math-classes/issues"
license: "MIT"

synopsis: "A library of abstract interfaces for mathematical structures in Coq"
description: """
Math classes is a library of abstract interfaces for mathematical
structures, such as:

*  Algebraic hierarchy (groups, rings, fields, …)
*  Relations, orders, …
*  Categories, functors, universal algebra, …
*  Numbers: N, Z, Q, …
*  Operations, (shift, power, abs, …)

It is heavily based on Coq’s new type classes in order to provide:
structure inference, multiple inheritance/sharing, convenient
algebraic manipulation (e.g. rewriting) and idiomatic use of
notations.
"""

build: [
  [ "./configure.sh" ]
  [ make "-j%{jobs}%" ]
]
install: [make "install"]
depends: [
  "coq" {(>= "8.11" & < "8.17~") | (= "dev")}
  "coq-bignums" 
]

tags: [
  "logpath:MathClasses"
]
authors: [
  "Eelis van der Weegen"
  "Bas Spitters"
  "Robbert Krebbers"
]
